Add 3D version for region growing using MagicWand tool

--- a/source/Help/index.html
+++ b/source/Help/index.html
@@ -67,6 +67,7 @@ magic wand tool is specific to the location the mouse selects and uses region gr
 
 <dl>
 <dt>Double-click</dt><dd>navigate with all 3 orthogonal views to mouse location</dd>
+<dt>Alt-Mouse</dt><dd>In MagicWand mode holding down the Alt-key will enable the 3D region growing</dd>
 </dl>
 
 This software is build in C++/Qt using boost and the following C++ library to read in DICOM images:
